--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App-container {
     display: inline-block;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    width: 95vw;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
     text-align: center;
+    width: calc(100% - 5rem)
 }
