--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,8 @@
   --primary-pink:#EB286A;
   --primary-yellow: #EBAA28;
   --base-color: #13141C;
-  --base-secondary-color: #1F2028
+  --base-secondary-color: #1F2028;
+  --completed-color: #386641;
 }
 
 body {
