updated styling for landing page fixing width

--- a/src/components/KeyFeatures/KeyFeatures.scss
+++ b/src/components/KeyFeatures/KeyFeatures.scss
@@ -1,6 +1,7 @@
 .key-features-container {
     display: inline-block;
     margin-top: 80px;
+    width: 100%;
 }
 
 .main-text {
@@ -10,5 +11,5 @@
 
 .features {
     background-color: var(--base-secondary-color);
-    width: 90vw;
+    width: 100%;
 }
