--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 .App-container {
-    display: inline-block;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
+    display: block;
+    width: 100%;
+    height: calc(100vh - 75px);
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
     text-align: center;
-    width: calc(100% - 5rem)
 }
