--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,19 @@
   --completed-color: #386641;
 }
 
+// .box {
+//   margin: 0;
+//   padding: 0;
+// }
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  height: 100vh;
+  width: 100%;
   background-color:#13141C;
   color: #FFFFFF;
   margin: 0;
