--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,7 +1,9 @@
 .Hero {
     width: 100%;
-    height: 40vh;
+    height: fit-content;
     display: inline-block;
+    // TODO: remove later
+    margin-bottom: 45px;
 }
 
 .Hero-main-text {
