modified width of Homepage Tiles

--- a/src/components/Tile/Tile.scss
+++ b/src/components/Tile/Tile.scss
@@ -34,5 +34,7 @@
     .TileAboveMobile {
         margin-right: 20px;
         min-height: 325px;
+        max-width: 315px;
+        width: 315px;
     }
 }
