updated stylong on landing page + removed unnecessary console logs with data

--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -4,13 +4,13 @@
     display: inline-block;
     // TODO: remove later
     margin-bottom: 45px;
+    margin-top: 75px;
 }
 
 .Hero-main-text {
-    font-weight: bolder;
+    font-weight: bold;
     text-align: center;
     letter-spacing: 0.04em;
-    padding-top: 75px;
 }
 
 .Hero-subtext {
