--- a/frontend/src/routes/CreateWorkout/CreateWorkout.scss
+++ b/frontend/src/routes/CreateWorkout/CreateWorkout.scss
@@ -2,11 +2,21 @@
     max-width: 500px;
 }
 
+.workoutsAddedContainer {
+    max-height: 310px;
+    overflow-y: scroll;
+}
 .repsMaxWidth {
     max-width: 225px;
 }
 
-.formContainer {
+.programHeader {
+    background-color: var(--base-secondary-color);
+    width: 100%;
+    border-radius: 10px;
+}
+
+.dayContainer {
     background-color: var(--base-secondary-color);
     border-radius: 10px;
     padding: 10px 0;
